--- a/braille_dev_f401.ioc
+++ b/braille_dev_f401.ioc
@@ -1,4 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
+CAD.formats=
+CAD.pinconfig=
+CAD.provider=
 File.Version=6
 KeepUserPlacement=false
 Mcu.CPN=STM32F401CCU6
@@ -18,25 +21,25 @@ Mcu.Pin3=PH1 - OSC_OUT
 Mcu.Pin4=PA11
 Mcu.Pin5=PA12
 Mcu.Pin6=VP_SYS_VS_Systick
-Mcu.Pin7=VP_USB_DEVICE_VS_USB_DEVICE_HID_FS
+Mcu.Pin7=VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
 Mcu.PinsNb=8
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401CCUx
 MxCube.Version=6.5.0
 MxDb.Version=DB.6.0.50
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.OTG_FS_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA11.Mode=Device_Only
 PA11.Signal=USB_OTG_FS_DM
 PA12.Mode=Device_Only
@@ -68,10 +71,11 @@ ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
-ProjectManager.PreviousToolchain=
+ProjectManager.PreviousToolchain=STM32CubeIDE
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=braille_dev_f401.ioc
 ProjectManager.ProjectName=braille_dev_f401
+ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
@@ -107,15 +111,17 @@ RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=96000000
-USB_DEVICE.CLASS_NAME_FS=HID
-USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
-USB_DEVICE.VirtualMode=Hid
-USB_DEVICE.VirtualModeFS=Hid_FS
+USB_DEVICE.CLASS_NAME_FS=CUSTOM_HID
+USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,PID_CUSTOMHID_FS,USBD_CUSTOMHID_OUTREPORT_BUF_SIZE,USBD_CUSTOM_HID_REPORT_DESC_SIZE
+USB_DEVICE.PID_CUSTOMHID_FS=22362 
+USB_DEVICE.USBD_CUSTOMHID_OUTREPORT_BUF_SIZE=8
+USB_DEVICE.USBD_CUSTOM_HID_REPORT_DESC_SIZE=3
+USB_DEVICE.VirtualMode=CustomHid
+USB_DEVICE.VirtualModeFS=Custom_Hid_FS
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_USB_DEVICE_VS_USB_DEVICE_HID_FS.Mode=HID_FS
-VP_USB_DEVICE_VS_USB_DEVICE_HID_FS.Signal=USB_DEVICE_VS_USB_DEVICE_HID_FS
+VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS.Mode=CUSTOM_HID_FS
+VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
 board=custom
-isbadioc=false
