--- a/braille_dev_f401.ioc
+++ b/braille_dev_f401.ioc
@@ -112,10 +112,7 @@ RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=96000000
 USB_DEVICE.CLASS_NAME_FS=CUSTOM_HID
-USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,PID_CUSTOMHID_FS,USBD_CUSTOMHID_OUTREPORT_BUF_SIZE,USBD_CUSTOM_HID_REPORT_DESC_SIZE
-USB_DEVICE.PID_CUSTOMHID_FS=22362 
-USB_DEVICE.USBD_CUSTOMHID_OUTREPORT_BUF_SIZE=8
-USB_DEVICE.USBD_CUSTOM_HID_REPORT_DESC_SIZE=3
+USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
 USB_DEVICE.VirtualMode=CustomHid
 USB_DEVICE.VirtualModeFS=Custom_Hid_FS
 USB_OTG_FS.IPParameters=VirtualMode
