--- a/braille_dev_f401.ioc
+++ b/braille_dev_f401.ioc
@@ -21,14 +21,20 @@ Mcu.Name=STM32F401C(B-C)Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
+Mcu.Pin10=PB6
+Mcu.Pin11=PB7
+Mcu.Pin12=PB8
+Mcu.Pin13=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin14=VP_SYS_VS_tim11
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PA9
 Mcu.Pin6=PA10
-Mcu.Pin7=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin8=VP_SYS_VS_tim11
-Mcu.PinsNb=9
+Mcu.Pin7=PB3
+Mcu.Pin8=PB4
+Mcu.Pin9=PB5
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401CCUx
@@ -56,6 +62,30 @@ PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=CD74HCT4067_EN
+PB3.Locked=true
+PB3.Signal=GPIO_Output
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=CD74HCT4067_S0
+PB4.Locked=true
+PB4.Signal=GPIO_Output
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=CD74HCT4067_S1
+PB5.Locked=true
+PB5.Signal=GPIO_Output
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=CD74HCT4067_S2
+PB6.Locked=true
+PB6.Signal=GPIO_Output
+PB7.GPIOParameters=GPIO_Label
+PB7.GPIO_Label=CD74HCT4067_S3
+PB7.Locked=true
+PB7.Signal=GPIO_Output
+PB8.GPIOParameters=GPIO_Label
+PB8.GPIO_Label=CD74HCT4067_S
+PB8.Locked=true
+PB8.Signal=GPIO_Input
 PC13-ANTI_TAMP.GPIOParameters=GPIO_Label
 PC13-ANTI_TAMP.GPIO_Label=LED
 PC13-ANTI_TAMP.Locked=true
