--- a/braille_dev_f401.ioc
+++ b/braille_dev_f401.ioc
@@ -21,20 +21,23 @@ Mcu.Name=STM32F401C(B-C)Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PB6
-Mcu.Pin11=PB7
-Mcu.Pin12=PB8
-Mcu.Pin13=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin14=VP_SYS_VS_tim11
+Mcu.Pin10=PB3
+Mcu.Pin11=PB4
+Mcu.Pin12=PB5
+Mcu.Pin13=PB6
+Mcu.Pin14=PB7
+Mcu.Pin15=PB8
+Mcu.Pin16=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin17=VP_SYS_VS_tim11
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
-Mcu.Pin5=PA9
-Mcu.Pin6=PA10
-Mcu.Pin7=PB3
-Mcu.Pin8=PB4
-Mcu.Pin9=PB5
-Mcu.PinsNb=15
+Mcu.Pin5=PB12
+Mcu.Pin6=PB13
+Mcu.Pin7=PB14
+Mcu.Pin8=PA9
+Mcu.Pin9=PA10
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401CCUx
@@ -62,6 +65,18 @@ PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=CD74HC595_SH_CP
+PB12.Locked=true
+PB12.Signal=GPIO_Output
+PB13.GPIOParameters=GPIO_Label
+PB13.GPIO_Label=CD74HC595_ST_CP
+PB13.Locked=true
+PB13.Signal=GPIO_Output
+PB14.GPIOParameters=GPIO_Label
+PB14.GPIO_Label=CD74HC595_DS
+PB14.Locked=true
+PB14.Signal=GPIO_Output
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=CD74HCT4067_EN
 PB3.Locked=true
